More endpoints and documentation, added S3-Bucket
