# models/Phase.ts
@@ -3,17 +3,6 @@ import { Standard } from './StandardAttribute';
 /**
  * @swagger
  * components:
- *   requestBodies:
- *     Phase_data:
- *       description: Request to add a new Phase.
- *       required: true
- *       content:
- *         application/json:
- *           schema:
- *             type: object
- *             properties:
- *               name:
- *                 type: string
  *   schemas:
  *     Phase:
  *       type: object
